fix tricksy alignmentses forthe next/back button

--- a/css/style.less
+++ b/css/style.less
@@ -220,6 +220,10 @@ nav {
     align-self:flex-start;
     &.back {
       .plainButton;
+      margin-right:auto;
+      }
+      &:last-of-type, &:nth-last-child(2):nth-child(2) {
+        margin-left:auto
       }
     }
   }
